# tiny-diffusion

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json  vis.ipynb
data/output/experiments/cfg_all_shapes/: frames.npy  loss.npy  model.pth
data/output/experiments/manual_test/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_10cat_1000ep/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_10cat_1000ep_text/: checkpoint.pth  frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_all_text/: checkpoint.pth  frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_all_text_long/: checkpoint.pth  model.pth
data/output/experiments/quickdraw_allcat_1000ep/: checkpoint.pth  frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_fast/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_final/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_text/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_text_large/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_v2/: frames.npy  loss.npy  model.pth
data/output/experiments/quickdraw_v3/: model.pth
data/output/experiments/quickdraw_v4/: frames.npy  loss.npy  model.pth
data/output/experiments/text_conditioned/: frames.npy  loss.npy  model.pth
data/output/experiments/wandb_test/: frames.npy  loss.npy  model.pth
data/output/experiments/wandb_test_100ep/: frames.npy  loss.npy  model.pth
src/tiny_diffusion/: datasets.py  ddpm.py  infer.py  train.py
src/tiny_diffusion/datasets/: __init__.py  circle.py  dino.py  line.py  moons.py  quickdraw.py
src/tiny_diffusion/model/: __init__.py  mlp.py  noise_scheduler.py  positional_embeddings.py
(+245 files in other folders)
