[project]
name = "tiny-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Iñaki Arango", email = "arangoinaki@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "celluloid>=0.2.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "pandas>=3.0.1",
  "scikit-learn>=1.8.0",
  "torch>=2.11.0",
  "tqdm>=4.67.3",
  "typer>=0.24.1",
]

[project.scripts]
model-train = "tiny_diffusion.train:app"
model-infer = "tiny_diffusion.infer:app"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
